--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -292,9 +292,9 @@ FROM
     post JOIN comment ON post.id = comment.post_id
 ```
 
-`FROM` の対象が今までのように単一のテーブルではなく `comment JOIN post ON post.id = comment.post_id` という「何か」になっています。
+`FROM` の対象が今までのように単一のテーブルではなく `post JOIN comment ON post.id = comment.post_id` という「何か」になっています。
 
-この「何か」の正体は、 **`comment` テーブルと `post` テーブルを結合して作った1つの大きなテーブル** です。
+この「何か」の正体は、 **`post` テーブルと `comment` テーブルを結合して作った1つの大きなテーブル** です。
 
 この部分の意味を紐解くと、以下のようになっています。
 
