--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -15,9 +15,9 @@ published_at: 2020-02-25
 
 ぜひ最後までお付き合いください。
 
-# この講座のゴール
+# この記事のゴール
 
-最初にこの講座のゴールを確認しておきましょう。
+最初にこの記事のゴールを確認しておきましょう。
 
 * データベースという概念をなんとなく理解すること
 * 簡単なSQLを自力で書けるようになること
@@ -38,11 +38,11 @@ published_at: 2020-02-25
 
 データベースは、膨大なデータを効率よく管理できるように作られています。
 
-少量のデータを管理するだけなら、例えばスプレッドシートで管理することもできるでしょう。
+少量のデータを管理するだけなら、例えばExcelなどでも十分に管理することもできるでしょう。
 
-データベースで管理するのもスプレッドシートで管理するのも本質的にやることは同じです。
+データベースで管理するのもExcelで管理するのも本質的にやることは同じです。
 
-データが膨大になってきたときに、スプレッドシートでは難しい細やかな集計方法や、便利に管理するための機能を色々使えるのがデータベースのメリットです。
+データが膨大になってきたときに、Excelでは難しい細やかな集計方法や、便利に管理するための機能を色々使えるのがデータベースのメリットです。
 
 例えば、データベースを使うと、 **膨大なデータの中から、指定した条件に一致するデータをお好みの形に整形して取り出したりすることができます** 🙌
 
@@ -64,19 +64,19 @@ published_at: 2020-02-25
 
 スプレッドシートで管理するとしたら下図のようなイメージになるでしょう。
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fe18fwhj31em050n1a.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/38e320ec-65e7-4df5-843e-b20acf62f2de)
 
 この例だとたまたま1つの記事に1つずつしかコメントが付いていませんが、もちろんコメントはいくつでも投稿することが可能です。
 
 各記事に複数のコメントが付いた場合、表は以下のような形になるでしょう。
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fenk3maj31em0am12a.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/5572b914-74d6-410c-b654-c8d6326a7c4b)
 
 パッと見で単純に見づらいと思いますが、この表には見づらいこと以上の致命的な問題があります。それは、 **情報が重複して保存されている** ということです。
 
 例えば、**あとから最後のブログ記事のタイトルを変更する場合** 、下図の黄色い部分3箇所を更新する必要があります。
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8ff4bbt7j31ek0aidps.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/17086487-e3d5-48da-89e6-0da6347f2b50)
 
 このような場合に、変更になった情報は本質的には `1つの記事のタイトル` だけなのに、同じ変更を複数の行に対して行わなければならないため、
 
@@ -89,7 +89,7 @@ published_at: 2020-02-25
 
 たったこれだけのデータ量でもすでに面倒くさそうですが、**何十万本も記事があってすべての記事に何百というコメントが付くような巨大メディアだったら** 一体どうなってしまうでしょうか…？😰
 
-とてもじゃないけどスプレッドシートで管理するのは無理そうですよね。
+とてもじゃないけどExcelで管理するのは無理そうですよね。
 
 ## データベースを使うとどうなるか
 
@@ -97,7 +97,9 @@ published_at: 2020-02-25
 
 > ちなみに、データベース用語では「表」のことを「テーブル」と呼びます。
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fga67m3j310c0ia47h.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/79de90e2-b316-4e25-82ff-f529428713ff)
+
+![image](https://github.com/ttskch/zenn-content/assets/4360663/fca44142-6f4d-4796-8a91-7bd467a6ae97)
 
 この例では、 `記事` テーブルと `コメント` テーブルにデータを分割して、
 
@@ -111,7 +113,7 @@ published_at: 2020-02-25
 
 このような形で管理することで、先ほど例に挙げたような「記事タイトルを変更したい」という場合には、 `記事` テーブルの1行だけを変更すればいいという状態になっています。
 
-こんな風に「データの重複を排除した複数のテーブルを管理する」のは、スプレッドシートではかなり面倒くさいですよね。  
+こんな風に「データの重複を排除した複数のテーブルを管理する」のは、Excelではかなり面倒くさいですよね。  
 **それを簡単にできるようにしてくれるのがデータベースです** 👍
 
 # SQLとは
@@ -120,7 +122,7 @@ published_at: 2020-02-25
 
 ちなみに、MySQLやPostgreSQLなどデータベースソフトごとにSQLの文法は多少違っていたりします（「方言」と表現されます）。
 
-この講座ではMySQL用のSQLを扱いますが、この講座で扱う内容のレベルならほとんど方言による差異はありませんので、他のデータベースソフトを使う予定がある方もどうぞ安心して学んでください。
+この記事ではMySQL用のSQLを扱いますが、この記事で扱う内容のレベルならほとんど方言による差異はありませんので、他のデータベースソフトを使う予定がある方もどうぞ安心して学んでください。
 
 データベースに対する操作は、
 
@@ -129,19 +131,19 @@ published_at: 2020-02-25
 * データの更新
 * データの削除
 
-の4つがありますが、どの操作をする場合も、SQLで命令を記述する必要があります。 **（この講座では「データの抽出」の方法だけを学びます）**
+の4つがありますが、どの操作をする場合も、SQLで命令を記述する必要があります。 **（この記事では「データの抽出」の方法だけを学びます）**
 
 例えば、
 
 * `post` というテーブルから、
-* `date` という列の値が `2020-03-01` 以降の日付になっているものだけを抽出して、
+* `date` という列の値が `2023-03-01` 以降の日付になっているものだけを抽出して、
 * `id` という列の値で降順に並べ替えて、
 * `id` と `title` という2つの列の値を表示する
 
 ということをやりたい場合は、以下のようなSQLを実行します。
 
 ```sql
-SELECT id,title FROM post WHERE date >= "2020-03-01" ORDER BY id DESC;
+SELECT id,title FROM post WHERE date >= '2023-03-01' ORDER BY id DESC;
 ```
 
 なんとなーく、書いてあることの意味は想像できそうでしょうか。
@@ -152,9 +154,11 @@ SELECT id,title FROM post WHERE date >= "2020-03-01" ORDER BY id DESC;
 
 ここからは、データベース内に以下のような2つのテーブルが存在していることを想定して、SQLの使い方について説明していきます。（ケーススタディの例の、テーブル名と列名を英語にしただけです）
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fjchzkaj310e0iethf.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/c435b0b7-2069-49b6-a14b-b1c1ce35ce7e)
 
-なお、[こちらのツール](http://sqlfiddle.com/#!9/4829269/2) に実際にこの例と同じ内容のテーブルを作ってありますので、リンク先の画面右の欄にSQLを打ち込んで `Run SQL` という青いボタンをクリックすると、実際にSQLを実行してみることができます。
+![image](https://github.com/ttskch/zenn-content/assets/4360663/ff4aab9a-5a1c-4731-a124-ee37d3fed0e7)
+
+なお、[こちらのツール](http://sqlfiddle.com/#!9/14274e) に実際にこの例と同じ内容のテーブルを作ってありますので、リンク先の画面右の欄にSQLを打ち込んで `Run SQL` という青いボタンをクリックすると、実際にSQLを実行してみることができます。
 
 ## SELECT
 
@@ -170,9 +174,9 @@ SELECT id,title,text,date FROM post;
 
 | id | title | text | date |
 | --- | --- | --- | --- |
-| 1 | はじめまして | これから毎日投稿します！ | 2020-01-01 |
-| 2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
-| 3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
+| 1 | はじめまして | これから毎日投稿します！ | 2023-01-01 |
+| 2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
+| 3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
 
 `SELECT` `取得したい列名をカンマ区切りで並べる` `FROM` `テーブル名` `;`
 
@@ -202,7 +206,7 @@ SELECT * FROM post WHERE id = 2;
 
 | id | title | text | date |
 | --- | --- | --- | --- |
-| 2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
+| 2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
 
 基本のSELECT文の末尾に `WHERE` `条件` を追加すればいいわけですね。
 
@@ -225,9 +229,9 @@ SELECT * FROM post WHERE id = 2;
 
 | 演算子 | 意味 | 使い方の例 | 例の意味 |
 | --- | --- | --- | --- |
-| `LIKE` | 左辺が右辺の文字列と部分一致する | `WHERE text LIKE "%！%"` | textが `！` を含む |
-|  |  | `WHERE title "こん%"` | titleが `こん` で始まる |
-|  |  | `WHERE title "%なら"` | titleが `なら` で終わる |
+| `LIKE` | 左辺が右辺の文字列と部分一致する | `WHERE text LIKE '%！%'` | textが `！` を含む |
+|  |  | `WHERE title 'こん%'` | titleが `こん` で始まる |
+|  |  | `WHERE title '%なら'` | titleが `なら` で終わる |
 
 > `%` がワイルドカードで、そこにどんな文字列が入ってもマッチする、という考え方です。
 
@@ -242,18 +246,18 @@ SELECT * FROM post WHERE id = 2;
 | 演算子 | 意味 | 使い方の例 | 例の意味 |
 | --- | --- | --- | --- |
 | `NOT` | 直後の演算子または条件を否定する | `WHERE id NOT IN (1,3)` | idが「1または3」ではない |
-|  |  | `WHERE title NOT LIKE  "こん%"` | textが `こん` で始まらない |
+|  |  | `WHERE title NOT LIKE  'こん%'` | textが `こん` で始まらない |
 |  |  | `WHERE NOT id >= 2` | idが「2以上」ではない |
 
 #### 複数条件の結合
 
 | 演算子 | 意味 | 使い方の例 | 例の意味 |
 | --- | --- | --- | --- |
-| `AND` | 2つの条件を「かつ」で結合する | `WHERE id > 1 AND title LIKE "%なら"` | idが1より大きく、かつ、titleが `なら` で終わる |
-|  |  | `WHERE id NOT IN (1,3) AND text LIKE "%！%"` | idが「1または3」でなく、かつ、textが `！` を含む |
-| `OR` | 2つの条件を「または」で結合する | `WHERE id > 1 OR title LIKE "%なら"` | idが1より大きいか、または、titleが `なら` で終わる |
-|  |  | `WHERE id IN (1,3) OR text NOT LIKE "%！%"` | idが「1または3」であるか、または、titleが `！` を含まない |
-| `()` | 結合された条件のまとまりを明示する | `WHERE text LIKE "%！%" AND (id > 1 OR title LIKE "%なら")` | textが `！` を含み、かつ、「idが1より大きいか、または、titleが `なら` で終わる」 |
+| `AND` | 2つの条件を「かつ」で結合する | `WHERE id > 1 AND title LIKE '%なら'` | idが1より大きく、かつ、titleが `なら` で終わる |
+|  |  | `WHERE id NOT IN (1,3) AND text LIKE '%！%'` | idが「1または3」でなく、かつ、textが `！` を含む |
+| `OR` | 2つの条件を「または」で結合する | `WHERE id > 1 OR title LIKE '%なら'` | idが1より大きいか、または、titleが `なら` で終わる |
+|  |  | `WHERE id IN (1,3) OR text NOT LIKE '%！%'` | idが「1または3」であるか、または、titleが `！` を含まない |
+| `()` | 結合された条件のまとまりを明示する | `WHERE text LIKE '%！%' AND (id > 1 OR title LIKE '%なら')` | textが `！` を含み、かつ、「idが1より大きいか、または、titleが `なら` で終わる」 |
 
 > ORよりANDのほうが演算子としての優先度が高いため、ANDとORを複雑につなぎ合わせる場合、 `()` で適切にまとまりを明示しておかないと、意図と異なる意味の条件になってしまう恐れがあります。
 > 
@@ -265,13 +269,13 @@ SELECT * FROM post WHERE id = 2;
 
 ここまで見てきた例では、いずれも1つのテーブルだけからデータを抽出していました。
 
-しかし、例えば **「『投稿日が `2020-03-01` 以降の記事』に付いているコメントの本文を一覧で欲しい」** という場合、 `comment` テーブルに対するSELECT文にどんなWHEREを記述しても、所望のデータを取得することはできません。なぜなら、 `comment` テーブルには、「そのコメントの親である記事の『投稿日』の情報」は載っていないからです。
+しかし、例えば **「『投稿日が `2023-03-01` 以降の記事』に付いているコメントの本文を一覧で欲しい」** という場合、 `comment` テーブルに対するSELECT文にどんなWHEREを記述しても、所望のデータを取得することはできません。なぜなら、 `comment` テーブルには、「そのコメントの親である記事の『投稿日』の情報」は載っていないからです。
 
 そもそもデータベースの世界では、 **各テーブル内にデータの重複がなくなるように「わざわざ」テーブルを細かく分けている** わけですから、データを抽出する際に複数のテーブルを結合したくなる場面が当然にあるのです。
 
 こういう場合に使うのが、 `JOIN` という命令です。
 
-先ほど例に挙げた「『投稿日が `2020-03-01` 以降の記事』に付いているコメントの本文の一覧」を抽出するSQLは、以下のようになります。
+先ほど例に挙げた「『投稿日が `2023-03-01` 以降の記事』に付いているコメントの本文の一覧」を抽出するSQLは、以下のようになります。
 
 ```sql
 SELECT
@@ -279,7 +283,7 @@ SELECT
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    post.date >= "2020-03-01"
+    post.date >= '2023-03-01'
 ;
 ```
 
@@ -306,11 +310,13 @@ FROM
 
 元となる以下のような2つのテーブルを、
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fjchzkaj310e0iethf.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/c435b0b7-2069-49b6-a14b-b1c1ce35ce7e)
+
+![image](https://github.com/ttskch/zenn-content/assets/4360663/ff4aab9a-5a1c-4731-a124-ee37d3fed0e7)
 
 結合することで、以下のような大きな1つのテーブルを作っているのです。
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fpq3kbxj31rk0bm15m.jpg)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/93907fd7-818a-434e-8a13-cceff09cb4e7)
 
 黄色く塗った列の値が、各行で一致していることが分かると思います。これは、 `ON post.id = comment.post_id` という条件で結合した結果です。
 
@@ -326,13 +332,13 @@ SELECT
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    post.date >= "2020-03-01"
+    post.date >= '2023-03-01'
 ;
 ```
 
-結合後のテーブルに対して、 `WHERE post.date >= "2020-03-01"` という条件で絞り込んだ結果のうち、 `comment.text` 列だけを出力する、という内容になっていることが理解できるかと思います。
+結合後のテーブルに対して、 `WHERE post.date >= "2023-03-01"` という条件で絞り込んだ結果のうち、 `comment.text` 列だけを出力する、という内容になっていることが理解できるかと思います。
 
-ところで、SELECTで取得する列やWHEREの条件に使用する列を指定する際、今までは `SELECT id,title,text,date` や `WHERE id = 2` のように、 **列名だけ** を書いていましたが、今回は `SELECT comment.text` `WHERE post.date >= "2020-03-01"` のように、 `テーブル名.列名` という形式で指定しています。
+ところで、SELECTで取得する列やWHEREの条件に使用する列を指定する際、今までは `SELECT id,title,text,date` や `WHERE id = 2` のように、 **列名だけ** を書いていましたが、今回は `SELECT comment.text` `WHERE post.date >= '2023-03-01'` のように、 `テーブル名.列名` という形式で指定しています。
 
 この理由は簡単で、例えば `SElECT text` とだけ書いた場合、 `post` テーブルの `text` なのか `comment` テーブルの `text` なのか分からないからです。
 
@@ -350,7 +356,7 @@ SELECT
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    post.date >= "2020-03-01"
+    post.date >= '2023-03-01'
 ;
 ```
 
@@ -358,11 +364,11 @@ WHERE
 
 | text | text |
 | --- | --- |
-| 少し間が空いちゃいました！明日から頑張ります！ | 頑張ってください！ |
-| 少し間が空いちゃいました！明日から頑張ります！ | 明日も来ます |
-| ブログやめます。ご愛読ありがとうございました。 | 草 |
-| ブログやめます。ご愛読ありがとうございました。 | www |
-| ブログやめます。ご愛読ありがとうございました。 | 大草原不可避 |
+| 少し間が空いちゃいました！<br>明日から頑張ります！ | 頑張ってください！ |
+| 少し間が空いちゃいました！<br>明日から頑張ります！ | 明日も来ます |
+| ブログやめます。<br>ご愛読ありがとうございました。 | 草 |
+| ブログやめます。<br>ご愛読ありがとうございました。 | www |
+| ブログやめます。<br>ご愛読ありがとうございました。 | 大草原不可避 |
 
 結果として得られたテーブルの列名に、元のテーブル名が含まれていないため、どちらも `text` という列名で出力されてしまって、このままだとどっちがどっちか分からないですね🙄
 
@@ -370,36 +376,36 @@ WHERE
 
 ```sql
 SELECT
-    post.text AS "記事本文",
-    comment.text AS "コメント本文"
+    post.text AS '記事本文',
+    comment.text AS 'コメント本文'
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    post.date >= "2020-03-01"
+    post.date >= '2023-03-01'
 ;
 ```
 
 | 記事本文 | コメント本文 |
 | --- | --- |
-| 少し間が空いちゃいました！明日から頑張ります！ | 頑張ってください！ |
-| 少し間が空いちゃいました！明日から頑張ります！ | 明日も来ます |
-| ブログやめます。ご愛読ありがとうございました。 | 草 |
-| ブログやめます。ご愛読ありがとうございました。 | www |
-| ブログやめます。ご愛読ありがとうございました。 | 大草原不可避 |
+| 少し間が空いちゃいました！<br>明日から頑張ります！ | 頑張ってください！ |
+| 少し間が空いちゃいました！<br>明日から頑張ります！ | 明日も来ます |
+| ブログやめます。<br>ご愛読ありがとうございました。 | 草 |
+| ブログやめます。<br>ご愛読ありがとうございました。 | www |
+| ブログやめます。<br>ご愛読ありがとうございました。 | 大草原不可避 |
 
 分かりやすいですね！
 
 JOINを使った場合に限らずいつでも使えるので、覚えておきましょう👌
 
 ```sql
-SELECT id, text AS "本文" FROM post;
+SELECT id, text AS '本文' FROM post;
 ```
 
 | id | 本文 |
 | --- | --- |
 |  1 | これから毎日投稿します！ |
-|  2 | 少し間が空いちゃいました！明日から頑張ります！ |
-|  3 | ブログやめます。ご愛読ありがとうございました。 |
+|  2 | 少し間が空いちゃいました！<br>明日から頑張ります！ |
+|  3 | ブログやめます。<br>ご愛読ありがとうございました。 |
 
 ## ORDER BY
 
@@ -415,9 +421,9 @@ SELECT * FROM post ORDER BY id DESC;
 
 | id | title | text | date |
 | --- | --- | --- | --- |
-|  3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
-|  2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
-|  1 | はじめまして | これから毎日投稿します！ | 2020-01-01 |
+|  3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
+|  2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
+|  1 | はじめまして | これから毎日投稿します！ | 2023-01-01 |
 
 文法は、 `ORDER BY` `列の指定` `昇順/降順の指定` です。
 
@@ -434,7 +440,7 @@ SELECT * FROM post ORDER BY id DESC;
 
 次は少しだけ難解かもしれませんが、ある程度複雑な集計をしようとすると必要になってくる `GROUP BY` という命令です。
 
-例えば、 **「2020-03-01以降にコメントが付いた記事の一覧」** が欲しいとします。
+例えば、 **「2023-03-01以降にコメントが付いた記事の一覧」** が欲しいとします。
 
 この場合、素直にSQLを書くと以下のようになるでしょう。
 
@@ -444,7 +450,7 @@ SELECT
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    comment.date >= "2020-03-01"
+    comment.date >= '2023-03-01'
 ;
 ```
 
@@ -454,21 +460,23 @@ WHERE
 
 | id | title | text | date |
 | --- | --- | --- | --- |
-|  2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
-|  2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
-|  3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
-|  3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
-|  3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
+|  2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
+|  2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
+|  3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
+|  3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
+|  3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
 
 条件で絞り込んだ結果の「記事の一覧」が欲しかったのに、同じ記事がいくつか重複して出力されていました。なぜでしょうか？🤔
 
 思い出してみましょう。 `JOIN` を使って結合されたテーブルは、下図のような形をしていました。
 
-この大きなテーブルに対して `WHERE comment.date >= "2020-03-01"` という条件で絞り込んだわけですから、取得されるデータは下図の黄色い部分になります。
+![image](https://github.com/ttskch/zenn-content/assets/4360663/ca9212b6-e456-4533-8f23-1c1e8bc853c4)
 
-![](https://tva1.sinaimg.cn/large/0082zybpgy1gc8fv8imhij31rk0bmk3g.jpg)
+この大きなテーブルに対して `WHERE comment.date >= '2023-03-01'` という条件で絞り込んで（下図の黄色い部分）、`post.*` を出力したわけですから、取得されるデータは下図の赤い部分になります。
 
-この黄色い部分のうち `post.*` を出力すると、確かに上記のような結果になりますね。
+![image](https://github.com/ttskch/zenn-content/assets/4360663/7cb4abb2-48e7-46ea-b90f-f0a26fca5257)
+
+確かに上記の結果と一致していますね。
 
 理屈は分かりましたが、重複を削除して純粋な「条件に合致する記事の一覧」を取得する方法はないのでしょうか？
 
@@ -482,7 +490,7 @@ SELECT
 FROM
     post JOIN comment ON post.id = comment.post_id
 WHERE
-    comment.date >= "2020-03-01"
+    comment.date >= '2023-03-01'
 -- 以下を追記
 GROUP BY post.id
 ;
@@ -490,8 +498,8 @@ GROUP BY post.id
 
 | id | title | text | date |
 | --- | --- | --- | --- |
-| 2 | こんにちは | 少し間が空いちゃいました！明日から頑張ります！ | 2020-03-01 |
-| 3 | さようなら | ブログやめます。ご愛読ありがとうございました。 | 2020-05-01 |
+| 2 | こんにちは | 少し間が空いちゃいました！<br>明日から頑張ります！ | 2023-03-01 |
+| 3 | さようなら | ブログやめます。<br>ご愛読ありがとうございました。 | 2023-05-01 |
 
 文法は `GROUP BY` `列名` です。
 
@@ -509,9 +517,9 @@ SELECT * FROM comment LIMIT 3;
 
 | id | post_id | name | text | date |
 | --- | --- | --- | --- | --- |
-| 1 | 1 | a-yamada | 期待 | 2020-01-02 |
-| 2 | 1 | t-kanemoto | 楽しみにしてます！ | 2020-01-03 |
-| 3 | 1 | b-suzuki | wktk | 2020-01-04 |
+| 1 | 1 | 山田 | 期待 | 2023-01-02 |
+| 2 | 1 | 鈴木 | 楽しみにしてます！ | 2023-01-03 |
+| 3 | 1 | 佐藤 | wktk | 2023-01-04 |
 
 > 本当は全部で8件あるのに、最初の3件しか出力されていません。
 
@@ -540,21 +548,21 @@ SELECT * FROM comment LIMIT 3;
 ```sql
 SELECT
     id,
-    DATE_FORMAT(date, "%Y/%m/%d")
+    DATE_FORMAT(date, '%Y/%m/%d')
 FROM post;
 ```
 
-| id | DATE_FORMAT(date, "%Y/%m/%d") |
+| id | DATE_FORMAT(date, '%Y/%m/%d') |
 | --- | --- |
-| 1 | 2020/01/01 |
-| 2 | 2020/03/01 |
-| 3 | 2020/05/01 |
+| 1 | 2023/01/01 |
+| 2 | 2023/03/01 |
+| 3 | 2023/05/01 |
 
 ここでは、集計において特に頻繁に使うであろう代表的な関数をいくつか紹介します。
 
 > [MySQLには実に様々な関数が用意されています](https://dev.mysql.com/doc/refman/5.6/ja/func-op-summary-ref.html)。興味があれば覗いてみてください😇
 
-なお、最初に「この講座で扱う内容のレベルならほとんど方言による差異はありません」と書きましたが、データベースソフトによる違いが最も大きいのが、用意されている関数の種類や名称です。
+なお、最初に「この記事で扱う内容のレベルならほとんど方言による差異はありません」と書きましたが、データベースソフトによる違いが最も大きいのが、用意されている関数の種類や名称です。
 
 これから紹介するような基本的な関数ならどのデータベースソフトでもほとんど同じ仕様で用意されていますが、例えば上記の `DATE_FORMAT()` 関数などは実はMySQL特有の関数で、他のデータベースソフトでは名称や仕様が異なっています。
 
@@ -569,8 +577,8 @@ FROM post;
 以下のように、特定の列名を `COUNT()` で囲う形で使用します。
 
 ```sql
--- 投稿日が2020-03-01以降である記事の数
-SELECT COUNT(id) FROM post WHERE date >= "2020-03-01";
+-- 投稿日が2023-03-01以降である記事の数
+SELECT COUNT(id) FROM post WHERE date >= '2023-03-01';
 ```
 
 | COUNT(id) |
@@ -580,8 +588,8 @@ SELECT COUNT(id) FROM post WHERE date >= "2020-03-01";
 `COUNT()` を外すと（当たり前ですが）内訳が分かります。
 
 ```sql
--- 投稿日が2020-03-01以降である記事の一覧
-SELECT id FROM post WHERE date >= "2020-03-01";
+-- 投稿日が2023-03-01以降である記事の一覧
+SELECT id FROM post WHERE date >= '2023-03-01';
 ```
 
 | id |
@@ -596,7 +604,7 @@ SELECT id FROM post WHERE date >= "2020-03-01";
 `COUNT` の例で書いたSQLの `COUNT` の部分を `SUM` に置き換えてみると、以下のような結果が得られます。
 
 ```sql
-SELECT SUM(id) FROM post WHERE date >= "2020-03-01";
+SELECT SUM(id) FROM post WHERE date >= '2023-03-01';
 ```
 
 | SUM(id) |
@@ -612,7 +620,7 @@ SELECT SUM(id) FROM post WHERE date >= "2020-03-01";
 合計が出せるなら平均も出したいのが人情ですね。平均値を出力する関数は `AVG()` です。（ `average` の略）
 
 ```sql
-SELECT AVG(id) FROM post WHERE date >= "2020-03-01";
+SELECT AVG(id) FROM post WHERE date >= '2023-03-01';
 ```
 
 | AVG(id) |
@@ -623,7 +631,7 @@ SELECT AVG(id) FROM post WHERE date >= "2020-03-01";
 
 データベースの概念とSQLの具体的な使い方について、ケーススタディーを通して学んできました。
 
-最初に掲げたこの講座のゴールは
+最初に掲げたこの記事のゴールは
 
 * データベースという概念をなんとなく理解すること
 * 簡単なSQLを自力で書けるようになること
