[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -2,7 +2,7 @@
 title: "【個人開発】 #買ってよかった が集まるSNS「pocitta（ポチッタ）」を支える技術"
 emoji: "🚀"
 type: "tech"
-topics: ["nextjs", "react", "vercel", "php", "symfony", "apiplatform", "render", "cloudfront", "supabase", "個人開発"]
+topics: ["nextjs", "vercel", "php", "render", "個人開発"]
 published: true
 ---
 
