[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -86,7 +86,7 @@ APIクライアントには [aspida](https://github.com/aspida/aspida) を使っ
 
 ![image](https://github.com/ttskch/zenn-content/assets/4360663/9c5a64c1-1752-4f98-8190-0dd5ccd01277)
 
-こんな感じでバックエンドAPIのすべてが型付けされて保管されます。
+こんな感じでバックエンドAPIのすべてが型付けされて補完されます。
 
 ちなみにaspidaの開発者は日本人のSolufaさんという方です。応援しましょう。
 
@@ -140,7 +140,7 @@ https://zenn.dev/ttskch/articles/33250dc0a5845c
 
 ### Vercel
 
-フロントエンドはNext.jsで実装していることもあり、ほぼ脳死で [Vercel](https://vercel.com/) でホストしています。
+フロントエンドはNext.jsで実装していることもあり、脳死で [Vercel](https://vercel.com/) でホストしています。
 
 スペック的にはHobbyプランでも全然回ると思うのですが、[Vercelの定めるCommercial Usage](https://vercel.com/docs/limits/fair-use-policy#commercial-usage) におそらく該当するため、Proプランに入っており、月額$20がかかっています。
 
