[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -144,7 +144,7 @@ https://zenn.dev/ttskch/articles/33250dc0a5845c
 
 スペック的にはHobbyプランでも全然回ると思うのですが、[Vercelの定めるCommercial Usage](https://vercel.com/docs/limits/fair-use-policy#commercial-usage) におそらく該当するため、Proプランに入っており、月額$20がかかっています。
 
-ログインユーザーに依存しない静的なレスポンスはすべて [Vercel Edge Cache](https://vercel.com/docs/edge-network/caching) によってキャッシュして高速化しています。
+ログインユーザーに依存しないレスポンスはすべて [Vercel Edge Cache](https://vercel.com/docs/edge-network/caching) によってキャッシュして高速化しています。
 
 Vercel Edge Cacheの導入手順は以下のスクラップをご参照ください。
 
