[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -193,7 +193,11 @@ https://zenn.dev/ttskch/articles/33250dc0a5845c
 
 ### Upstash
 
-バックエンドのアプリレイヤーの一部キャッシング（外部APIの結果セットなど）に [Upstash](https://upstash.com/) のRedisを使用しています。当面は [Freeプラン](https://upstash.com/pricing) で十分に回ります。
+バックエンドのアプリレイヤーの一部キャッシング（外部APIの結果セットなど）に [Upstash](https://upstash.com/) のRedisを使用しています。
+
+Japanリージョンもあるし、当面は [Freeプラン](https://upstash.com/pricing) で十分に回ります。
+
+RenderにもRedisのサービスはあるのですが、[データの永続性が保証されるPersistent Instanceは月$10のStarterプラン以上でないと使えない](https://render.com/docs/redis#persistent-instance-types) ため、RedisだけはUpstashを使っています。
 
 ### Vercel
 
