[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -56,7 +56,7 @@ https://prtimes.jp/story/detail/xzm4gYIdXNB
 
 大まかな構成は下図のとおりです。
 
-![image](https://github.com/ttskch/zenn-content/assets/4360663/ba47c723-877c-4501-b227-ab5e4352988c)
+![image](https://github.com/ttskch/zenn-content/assets/4360663/e9bc047d-2663-4468-a4df-d2360c3fb6bb)
 
 以下にレイヤーごとの詳細を解説します。
 
@@ -191,9 +191,95 @@ pocittaでは、Renderの
 
 https://zenn.dev/ttskch/articles/33250dc0a5845c
 
+### Amazon S3
+
+ストレージはS3を使っています。
+
+PHPで外部ストレージを抽象化するためのライブラリとして [thephpleague/flysystem](https://github.com/thephpleague/flysystem) を導入しており、S3との繋ぎ込みは [league/flysystem-async-aws-s3](https://flysystem.thephpleague.com/docs/adapter/async-aws-s3/) + [async-aws/simple-s3](https://github.com/async-aws/simple-s3) で行っています。
+
+Symfonyへのインテグレートは以下のような形になっています。
+
+```yaml
+# config/services.yaml
+services:
+  AsyncAws\SimpleS3\SimpleS3Client:
+    arguments:
+      $configuration:
+        accessKeyId: '%env(AWS_S3_ACCESS_KEY)%'
+        accessKeySecret: '%env(AWS_S3_SECRET_KEY)%'
+        region: '%env(AWS_S3_REGION)%'
+```
+
+```yaml
+# config/packages/flysystem.yaml
+flysystem:
+  storages:
+    default.storage:
+      adapter: asyncaws
+      options:
+        client: AsyncAws\SimpleS3\SimpleS3Client # service id
+        bucket: '%env(AWS_S3_BUCKET)%'
+        prefix: '%env(AWS_S3_PREFIX)%'
+```
+
+これで、`League\Flysystem\FilesystemOperator $defaultStorage` でどこにでもDIできるようになります。
+
+また、
+
+* DBからファイルを読み込んだときに自動でS3の [署名付き一時URL](https://docs.aws.amazon.com/ja_jp/AmazonS3/latest/userguide/ShareObjectPreSignedURL.html) を発行してエンティティに持たせる
+* DBからファイルを削除したときに自動でS3からも対応するファイルを削除する
+
+ために、Symfonyの [Entity Listener](https://symfony.com/bundles/DoctrineBundle/current/entity-listeners.html) を使って以下のような実装をしています。
+
+```php
+<?php
+
+declare(strict_types=1);
+
+namespace App\EntityListener;
+
+use App\Entity\File;
+use Cake\Chronos\Chronos;
+use Doctrine\Bundle\DoctrineBundle\Attribute\AsEntityListener;
+use Doctrine\ORM\Event\PostLoadEventArgs;
+use Doctrine\ORM\Event\PreRemoveEventArgs;
+use League\Flysystem\FilesystemOperator;
+use Symfony\Component\DependencyInjection\Attribute\Autowire;
+
+#[AsEntityListener(entity: File::class)]
+class FileListener
+{
+    public function __construct(
+        private readonly FilesystemOperator $defaultStorage,
+        private readonly CacheInterface $domainCache,
+        #[Autowire('%env(int:FILE_URL_LIFETIME)%')]
+        private readonly int $temporaryUrlLifetime,
+    ) {
+    }
+
+    public function postLoad(File $file, PostLoadEventArgs $event): void
+    {
+        $url = $this->defaultStorage->temporaryUrl(strval($file->getLocation()), Chronos::now()->addSeconds($this->temporaryUrlLifetime), [
+            'get_object_options' => [
+                'ResponseContentDisposition' => sprintf('attachment;filename=%s', $file->getName()),
+                'ResponseCacheControl' => sprintf('max-age=%s', $this->temporaryUrlLifetime),
+            ],
+        ]);
+        $file->setUrl($url);
+    }
+
+    public function preRemove(File $file, PreRemoveEventArgs $event): void
+    {
+        $this->defaultStorage->delete(strval($file->getLocation()));
+    }
+}
+```
+
+> 実際には `postLoad()` ではS3から取得した署名付き一時URLを [symfony/cache](https://symfony.com/doc/current/components/cache.html) 経由でRedisにキャッシュしているのですが、ここでは省略してご紹介しています。
+
 ### Upstash
 
-バックエンドのアプリレイヤーの一部キャッシング（外部APIの結果セットなど）に [Upstash](https://upstash.com/) のRedisを使用しています。
+バックエンドのアプリレイヤーの一部キャッシング（外部APIの結果セットなど）に [Upstash](https://upstash.com/) のRedisを使っています。
 
 Japanリージョンもあるし、当面は [Freeプラン](https://upstash.com/pricing) で十分に回ります。
 
