--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -133,7 +133,7 @@ $model = [$url, $title, $price, $imageUrls];
 
 フロントエンド/BFFは [Next.js](https://nextjs.org/) v12で実装しています。（そのうちv13に上げてApp Routerに移行する意思はあります）
 
-UIフレームワークはChakraUIを使っています。（最近 [shadcn/ui](https://ui.shadcn.com/) がとても気になっているので、そのうち移行する可能性があります）
+UIフレームワークは [Chakra UI](https://chakra-ui.com/) を使っています。（最近 [shadcn/ui](https://ui.shadcn.com/) がとても気になっているので、そのうち移行する可能性があります）
 
 APIクライアントには [aspida](https://github.com/aspida/aspida) を使っており、[openapi2aspida](https://github.com/aspida/openapi2aspida) によってバックエンドと型情報を共有しています。**超絶に開発体験がよいです。**
 
