[esa2github] Update post.

--- a/articles/5b7bbb7b83e31d.md
+++ b/articles/5b7bbb7b83e31d.md
@@ -274,7 +274,7 @@ class FileListener
 }
 ```
 
-> 実際には `postLoad()` ではS3から取得した署名付き一時URLを [symfony/cache](https://symfony.com/doc/current/components/cache.html) 経由でRedisにキャッシュしているのですが、ここでは省略してご紹介しています。
+> 実際には `postLoad()` ではS3から取得した署名付き一時URLを [symfony/cache](https://symfony.com/doc/current/components/cache.html) 経由でRedisにキャッシュしているのですが（そうしないと、ファイルが読まれる度にS3に対してURLを発行する処理を要求してしまうので）、ここでは省略してご紹介しています。
 
 ### Upstash
 
