--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -62,13 +62,15 @@ published_at: 2020-02-25
 
 例えば、よくある「ブログ記事」と「各記事に寄せられたコメント」というデータを考えてみましょう。
 
-スプレッドシートで管理するとしたら下図のようなイメージになるでしょう。
+Excelで管理するとしたら下図のようなイメージになるでしょう。
 
 ![image](https://github.com/ttskch/zenn-content/assets/4360663/38e320ec-65e7-4df5-843e-b20acf62f2de)
 
 この例だとたまたま1つの記事に1つずつしかコメントが付いていませんが、もちろんコメントはいくつでも投稿することが可能です。
 
 各記事に複数のコメントが付いた場合、表は以下のような形になるでしょう。
+
+> プログラムから機械的に操作することを前提として、実際にはExcelファイルではなくCSVファイルの形式でデータを管理することを想定したいので、**ここではセルの結合という手段は使えないものと考えてください** 🙏
 
 ![image](https://github.com/ttskch/zenn-content/assets/4360663/5572b914-74d6-410c-b654-c8d6326a7c4b)
 
