--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -62,15 +62,13 @@ published_at: 2020-02-25
 
 例えば、よくある「ブログ記事」と「各記事に寄せられたコメント」というデータを考えてみましょう。
 
-Excelで管理するとしたら下図のようなイメージになるでしょう。
+表形式で管理するとしたら下図のようなイメージになるでしょう。
 
 ![image](https://github.com/ttskch/zenn-content/assets/4360663/38e320ec-65e7-4df5-843e-b20acf62f2de)
 
 この例だとたまたま1つの記事に1つずつしかコメントが付いていませんが、もちろんコメントはいくつでも投稿することが可能です。
 
 各記事に複数のコメントが付いた場合、表は以下のような形になるでしょう。
-
-> プログラムから機械的に操作することを前提として、実際にはExcelファイルではなくCSVファイルの形式でデータを管理することを想定したいので、**ここではセルの結合という手段は使えないものと考えてください** 🙏
 
 ![image](https://github.com/ttskch/zenn-content/assets/4360663/5572b914-74d6-410c-b654-c8d6326a7c4b)
 
@@ -91,7 +89,13 @@ Excelで管理するとしたら下図のようなイメージになるでしょ
 
 たったこれだけのデータ量でもすでに面倒くさそうですが、**何十万本も記事があってすべての記事に何百というコメントが付くような巨大メディアだったら** 一体どうなってしまうでしょうか…？😰
 
-とてもじゃないけどExcelで管理するのは無理そうですよね。
+とてもじゃないけど1つの表で管理するのは無理そうですよね。
+
+> ちなみに、この例を見て「Excelの『セルの結合』を使えば重複をなくせるのでは？」と思った方も多くいらっしゃると思います。
+> 
+> それは完全にそのとおりで、表形式のデータの管理にExceというツールを使うなら、確かに「セルの結合」機能によって重複をなくすことはできます。
+> 
+> この話の趣旨は、「そうだとしても、Excelよりもデータベースというツールを使うほうが色々便利だよ」ということなので、その認識で読み進めていただければと思います🙏
 
 ## データベースを使うとどうなるか
 
