--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -8,6 +8,12 @@ published_at: 2020-02-25
 ---
 
 :::message
+2023-10-08に [PHPカンファレンス2023](https://phpcon.connpass.com/event/286717/) というイベントにて、この記事の内容で [登壇しました](https://fortee.jp/phpcon-2023/proposal/e23af23c-482a-431b-bcff-670eda6df73b)。よろしければそのときのスライド資料もあわせてご参照ください。
+:::
+
+@[speakerdeck](b5c633495cc9434294fca95fa844f6fa)
+
+:::message
 この記事は、2020-02-25に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
