[esa2github] Update post.

--- a/articles/9bc88a0d468604.md
+++ b/articles/9bc88a0d468604.md
@@ -336,6 +336,12 @@ public function insert(Row $row): void
 
 * CSVの「本文」カラムに `@ページ名` とか書けば自動でパースしてリンクにしてくれるようにする、とかもできそうですが面倒だったのでやりませんでした
 
+# ちなみにリクエスト制限について
+
+* [Request limits](https://developers.notion.com/reference/request-limits)
+* [Notion APIのLimit（リクエスト制限）で気になったことまとめ](https://zenn.dev/catnose99/articles/ab3afcb4338cbe)
+* **平均3リクエスト/秒** までOKで、1時間や1日単位での制限は記事執筆時点でなし
+
 # 参考リンク
 
 * [Notion API を使用してデータベースを操作する](https://zenn.dev/kou_pg_0131/articles/notion-api-usage)
