[esa2github] Update post.

--- a/articles/a23de13787be54.md
+++ b/articles/a23de13787be54.md
@@ -11,9 +11,9 @@ published_at: 2023-12-01 00:00
 
 > Twitter (X) でもちょいちょいAPI Platformネタを呟いてます！よろしければ [フォロー](https://twitter.com/ttskch) お願いします！
 
-> こんな本も書いてます！よろしくお願いします！
->
-> https://zenn.dev/ttskch/books/a3800fc0912fbb
+こんな本も書いてます！よろしくお願いします！
+
+https://zenn.dev/ttskch/books/a3800fc0912fbb
 
 # はじめに
 
