[esa2github] Update post.

--- a/articles/55ae8c8518c2c3.md
+++ b/articles/55ae8c8518c2c3.md
@@ -118,7 +118,7 @@ Symfonyアプリケーションのデフォルトは `"prefer-stable": true` で
 
 # `config.allow-plugins` `config.sort-packages`
 
-[`config.allow-plugins`](https://getcomposer.org/doc/06-config.md#allow-plugins) プロパティは、Composerの実行中にどのComposerプラグインにコードの実行を許可するかを指定するためのものです。セキュリティのためにComposer 2.2.0以降で追加されたプロパティです。Symfonyアプリケーションのデフォルトでは
+[`config.allow-plugins`](https://getcomposer.org/doc/06-config.md#allow-plugins) プロパティは、Composerの実行中にどのComposerプラグインにコードの実行を許可するかを指定するためのものです。[セキュリティのためにComposer 2.2.0以降で追加された](https://getcomposer.org/doc/06-config.md#allow-plugins:~:text=As%20of%20Composer,a%20Composer%20run.) プロパティです。Symfonyアプリケーションのデフォルトでは
 
 ```json
 "php-http/discovery": true,
@@ -132,7 +132,7 @@ Symfonyアプリケーションのデフォルトは `"prefer-stable": true` で
 
 # `autoload.psr-4` `autoload-dev.psr-4`
 
-[`autoload`](https://getcomposer.org/doc/04-schema.md#autoload) プロパティと [`autoload-dev`](https://getcomposer.org/doc/04-schema.md#autoload-dev) プロパティは、Composerが提供するPHPオートローダーに対しオートローディングのマッピング情報を情報を指示するためのものです。`psr-4` `psr-0` `classmap` `files` プロパティによる指定がサポートされていますが、Symfonyアプリケーションのデフォルトでは `psr-4` が使用されています。
+[`autoload`](https://getcomposer.org/doc/04-schema.md#autoload) プロパティと [`autoload-dev`](https://getcomposer.org/doc/04-schema.md#autoload-dev) プロパティは、Composerが提供するPHPオートローダーに対しオートローディングのマッピング情報を指示するためのものです。`psr-4` `psr-0` `classmap` `files` プロパティによる指定がサポートされており、Symfonyアプリケーションのデフォルトでは `psr-4` が使用されています。
 
 ```json
 "autoload": {
@@ -184,7 +184,7 @@ Symfonyアプリケーションのデフォルトは `"prefer-stable": true` で
 
 * `replace` プロパティの本来の使い方は以下のようなもの
     * 例えば `original/library` をフォークして自作した `better/library` の `composer.json` に、`"replace": {"original/libary": "1.0.2"}` のように書いておくと、「`better/library` は `original/library:1.0.2` の代替である」ということをComposerに伝えることができる
-    * これにより、あるパッケージが `better/library` と「`original/library:1.0.2` に依存している `other/package` というライブラリ」 に依存していたとしても、`original/library` はインストールされず、代わりに `better/library` が使われる、という挙動を実現できる
+    * これにより、あるパッケージが **`better/library` と `other/package` に依存していて、`other/package` が `original/library:1.0.2` に依存している場合** でも、**`original/library:1.0.2` はインストールされず、代わりに `better/library` が使われる** という挙動を実現できる
 * 応用的に、多数のコンポーネントから成るフレームワークの `composer.json` には、以下の理由から、「各コンポーネントをフレームワーク自身で `replace` する記述」がある場合がある
     * フレームワークとコンポーネントの両方に依存しているユーザーに対して、コンポーネントを重複してインストールさせたくない
     * なぜなら、フレームワークさえインストールされていればそこにすべてのコンポーネントが含まれるので
