[esa2github] Update post.

--- a/articles/55ae8c8518c2c3.md
+++ b/articles/55ae8c8518c2c3.md
@@ -299,6 +299,6 @@ Symfonyアプリケーションのデフォルトで定義されている `extra
 
 というわけで、`symfony/skeleton` パッケージでSymfonyをインストールしたときのデフォルトの `composer.json` の内容を、一つひとつ意味を確認しながら読んでみました。
 
-Symfonyに対する理解が少し深まりましたね！
+Symfony（とComposer）に対する理解が少し深まりましたね！
 
 [Symfony Advent Calendar 2023](https://qiita.com/advent-calendar/2023/symfony)、明日は空きです🥺どなたかぜひご参加ください！
