[esa2github] Update post.

--- a/articles/55ae8c8518c2c3.md
+++ b/articles/55ae8c8518c2c3.md
@@ -184,7 +184,7 @@ Symfonyアプリケーションのデフォルトは `"prefer-stable": true` で
 
 * `replace` プロパティの本来の使い方は以下のようなもの
     * 例えば `original/library` をフォークして自作した `better/library` の `composer.json` に、`"replace": {"original/libary": "1.0.2"}` のように書いておくと、「`better/library` は `original/library:1.0.2` の代替である」ということをComposerに伝えることができる
-    * これにより、あるパッケージが **`better/library` と `other/package` に依存していて、`other/package` が `original/library:1.0.2` に依存している場合** でも、**`original/library:1.0.2` はインストールされず、代わりに `better/library` が使われる** という挙動を実現できる
+    * これにより、あるパッケージXが **`better/library` と `other/package` に依存していて、`other/package` が `original/library:1.0.2` に依存している場合** に、パッケージ Xで `composer install` をした際、**`original/library:1.0.2` はインストールされず、代わりに `better/library` が使われる** という挙動を実現できる
 * 応用的に、多数のコンポーネントから成るフレームワークの `composer.json` には、以下の理由から、「各コンポーネントをフレームワーク自身で `replace` する記述」がある場合がある
     * フレームワークとコンポーネントの両方に依存しているユーザーに対して、コンポーネントを重複してインストールさせたくない
     * なぜなら、フレームワークさえインストールされていればそこにすべてのコンポーネントが含まれるので
