[esa2github] Update post.

--- a/articles/55ae8c8518c2c3.md
+++ b/articles/55ae8c8518c2c3.md
@@ -207,7 +207,7 @@ Symfonyアプリケーションのデフォルトは `"prefer-stable": true` で
 
 「自分自身が、各種polyfill系パッケージの `*`（任意のバージョン）の代替である」と宣言している、という意味だと分かります。
 
-自分自身がこれらのパッケージの任意のバージョンの代替である、ということは、結果的に **間接的な依存にこれらのパッケージが含まれていても、それらは一切インストールする必要はない** ということをComposerに伝えていることになります。
+自分自身がこれらのパッケージの任意のバージョンの代替である、ということは、結果的に **間接的な依存にこれらのパッケージが含まれていても、それらは一切インストールする必要はない**（だって自分自身がそれらの代替なのだから）ということをComposerに伝えていることになります。
 
 ここで改めて `require` プロパティの中身を見てみましょう。
 
