[esa2github] Update post.

--- a/articles/88e6719f969599.md
+++ b/articles/88e6719f969599.md
@@ -115,7 +115,7 @@ App\Entity\Admin:
 
 # やり方
 
-前置きが長くなりましたが、解決策はとても簡単で、デフォルトの `Nelmio\Alice\PropertyAccess\StdPropertyAccessor` の代わりに [`Nelmio\Alice\PropertyAccess\ReflectionPropertyAccessor`](https://github.com/nelmio/alice/blob/0297bae4c4a6cc580c7949656a8d1334ce65e690/src/PropertyAccess/ReflectionPropertyAccessor.php) というサービスを使えばよいだけです。
+前置きが長くなりましたが、解決策はとても簡単で、[デフォルトの `Nelmio\Alice\PropertyAccess\StdPropertyAccessor`](https://github.com/nelmio/alice/blob/3.13.3/src/Bridge/Symfony/Resources/config/property_access.xml#L18-L21) の代わりに [`Nelmio\Alice\PropertyAccess\ReflectionPropertyAccessor`](https://github.com/nelmio/alice/blob/3.13.3/src/PropertyAccess/ReflectionPropertyAccessor.php) というクラスを使えばよいだけです。
 
 具体的には、`config/services_test.yaml` に以下の設定を追記するだけでOKです。
 
@@ -123,7 +123,18 @@ App\Entity\Admin:
 services:
   nelmio_alice.property_accessor:
     class: Nelmio\Alice\PropertyAccess\ReflectionPropertyAccessor
+    arguments: ['@property_accessor']
 ```
+
+> **注意事項**
+>
+> 手元の環境だと、Symfony 5.4のプロジェクトでは上記の `arguments: ['@property_accessor']` は省略してももとの設定が引き継がれて問題なく動作したのですが、Symfony 6.4のプロジェクトだと `arguments: ['@property_accessor']` を省略すると以下のエラーになりました。
+>
+> ```
+> ArgumentCountError: Too few arguments to function Nelmio\Alice\PropertyAccess\ReflectionPropertyAccessor::__construct(), 0 passed in /path/to/project/var/cache/test/ContainerZKu8osY/getNelmioAlice_Generator_Resolver_Value_Chainable_FixturePropertyReferenceResolverService.php on line 29 and exactly 1 expected
+> ```
+>
+> Symfonyのどこかのバージョンから、既存のサービス定義の一部のフィールドだけを上書きするということができなくなっているようです（軽くググった限りソースを見つけられなかったので要出典です🙏）
 
 これで、
 
