[esa2github] Update post.

--- a/articles/e6f6b2af2972ab.md
+++ b/articles/e6f6b2af2972ab.md
@@ -37,7 +37,7 @@ $ brew install shivammathur/php/php@8.2
 $ brew install shivammathur/php/php@8.3
 ```
 
-グローバルでデフォルトで使いたいバージョンをリンクしておきます。
+システムのデフォルトとして使いたいバージョンをリンクしておきます。
 
 ```shell
 $ brew link --force --overwrite shivammathur/php/php@8.3
@@ -81,7 +81,7 @@ $ $(brew --prefix)/opt/php@7.4/bin/pecl install xdebug-3.1.6
 
 > xdebugは `shivammathur/extensions` タップで配布されていますが、適当な例が思いつかなかったので🙏
 
-`pecl install` のあとは必要に応じて `php.ini` を修正します。PHP拡張によっては `pecl install` 中に `php.ini` の先頭や末尾に `extension=...` を自動で追記してくれるものもあるので要注意です。
+`pecl install` したあとは必要に応じて `php.ini` を修正します。PHP拡張によっては `pecl install` 中に `php.ini` の先頭や末尾に `extension=...` を自動で追記してくれるものもあるので要注意です。
 
 ```shell
 $ vi $(brew --prefix)/etc/php/7.4/php.ini
@@ -111,7 +111,7 @@ $ brew install direnv
 $ echo 'eval "$(direnv hook zsh)"' >> ~/.zshrc
 ```
 
-次に、PHPバージョンを固定したいディレクトリの直下に、以下のような内容の `.envrc` というファイルを作成します。
+次に、PHPバージョンを指定したいディレクトリの直下に、以下のような内容の `.envrc` というファイルを作成します。
 
 ```shell
 export PATH=$(brew --prefix)/opt/php@8.1/bin:$PATH
@@ -125,7 +125,7 @@ direnv: loading /path/to/dir/.envrc
 direnv: export ~PATH
 ```
 
-これで、同ディレクトリ配下ではPHP 8.1が優先的に（グローバルのデフォルトはPHP 8.3であるにもかかわらず）使用されます。
+これで、同ディレクトリ配下ではPHP 8.1が優先的に（システムのデフォルトはPHP 8.3であるにもかかわらず）使用されます。
 
 ```shell
 $ php -v
@@ -157,7 +157,7 @@ direnv: export +PHP_INI_SCAN_DIR ~PATH
 
 ## ちなみに、Symfony CLIとの比較
 
-ちなみに、[Symfony CLI](https://github.com/symfony-cli/symfony-cli) が提供するローカルWebサーバーには、[プロジェクトルートの `.php-version` ファイルでPHPバージョンを固定したり、プロジェクトルートの `php.ini` ファイルで `symfony` コマンド経由のプロセスのPHP実行時設定を上書きできたり](https://symfony.com/doc/current/setup/symfony_server.html#different-php-settings-per-project) という便利な機能があるので、Symfonyプロジェクトにおいてはdirenvの代わりにこれを使っても似たような体験が得られそうですが、`composer` コマンドなどもいちいち `symfony composer` とタイプしなければならず面倒なので僕は常にdirenvを使った運用に統一しています。
+ちなみに、[Symfony CLI](https://github.com/symfony-cli/symfony-cli) が提供するローカルWebサーバーには、[プロジェクトルートの `.php-version` ファイルでPHPバージョンを指定したり、プロジェクトルートの `php.ini` ファイルで `symfony` コマンド経由のプロセスのPHP実行時設定を上書きできたり](https://symfony.com/doc/current/setup/symfony_server.html#different-php-settings-per-project) という便利な機能があるので、Symfonyプロジェクトにおいてはdirenvの代わりにこれを使っても似たような体験が得られそうですが、`composer` コマンドなどもいちいち `symfony composer` とタイプしなければならず面倒なので僕は常にdirenvを使った運用に統一しています。
 
 # おわりに
 
