[esa2github] Update post.

--- a/articles/e6f6b2af2972ab.md
+++ b/articles/e6f6b2af2972ab.md
@@ -155,7 +155,7 @@ direnv: loading /path/to/dir/.envrc
 direnv: export +PHP_INI_SCAN_DIR ~PATH
 ```
 
-## ちなみに、Symfony CLIとの比較
+# ちなみに：Symfony CLIとの比較
 
 ちなみに、[Symfony CLI](https://github.com/symfony-cli/symfony-cli) が提供する `symfony` コマンドには、[プロジェクトルートの `.php-version` ファイルでPHPバージョンを指定したり、プロジェクトルートの `php.ini` ファイルで `symfony` コマンド経由のプロセスのPHP実行時設定を上書きできたり](https://symfony.com/doc/current/setup/symfony_server.html#different-php-settings-per-project) という便利な機能があるので、Symfonyプロジェクトにおいてはdirenvの代わりにこれを使っても似たような体験が得られそうですが、`composer` コマンドや任意のPHPスクリプトをCLIで実行する際にもいちいち `symfony composer` や `symfony php` とタイプしなければならず、だいぶ面倒なので僕は常にdirenvを使った運用に統一しています。
 
