[esa2github] Update post.

--- a/articles/c899a5b2d44986.md
+++ b/articles/c899a5b2d44986.md
@@ -11,8 +11,7 @@ published_at: 2023-12-15 00:00
 
 > Twitter (X) でもちょいちょいSymfonyネタを呟いてます。よろしければ [フォロー](https://twitter.com/ttskch) お願いします🤲
 
-<!--昨日は [@polidog](https://twitter.com/polidog) さんの [こんにちわSymfony7]() でした✨-->
-昨日は [@polidog](https://twitter.com/polidog) さんの記事でした✨
+昨日は [@polidog](https://twitter.com/polidog) さんの [こんにちわSymfony7 with Flyio](https://zenn.dev/polidog/articles/59254b246ef4c3) でした✨
 
 # はじめに
 
