--- a/articles/d26f13131212bc.md
+++ b/articles/d26f13131212bc.md
@@ -11,6 +11,10 @@ published_at: 2020-07-30
 この記事は、2020-07-30に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
+:::message
+2023-12-24に [最新版の内容で同様の記事を書きました](https://zenn.dev/ttskch/articles/c9467909b1154b) ので、ぜひそちらをご覧ください。
+:::
+
 # TtskchPaginatorBundle
 
 シンプルでカスタマイズしやすい最強のページネーションバンドルを作りました。
