[esa2github] Update post.

--- a/articles/a2ce0952856142.md
+++ b/articles/a2ce0952856142.md
@@ -18,6 +18,8 @@ https://twitter.com/ttskch/status/1629808284684398592
 
 というわけでそのやり方をメモがてら残しておきます。
 
+> ちなみにこの記事を書いたあとで知ったのですが [ディザスタリカバリ](https://ja.wikipedia.org/wiki/%E3%83%87%E3%82%A3%E3%82%B6%E3%82%B9%E3%82%BF%E3%83%AA%E3%82%AB%E3%83%90%E3%83%AA) という言葉があるようです。
+
 # 1. S3バケットを作る
 
 普通に非公開のS3バケットを作ってください。
